--- a/docs/content/docs/index.mdx
+++ b/docs/content/docs/index.mdx
@@ -1,13 +1,6 @@
 ---
-title: Hello World
-description: Your first document
+title: Slot Engine Docs
+description: Learn about all Slot Engine packages
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
-
-## What is Next?
-
-<Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.dev" />
-</Cards>
+TODO: add cards?
