feat: add build script and fix errors

--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -4,4 +4,8 @@ description: Getting started with Slot Engine
 icon: "Rocket"
 ---
 
-Core
+---
+
+## Introduction
+
+Slot Engine is a family of TypeScript libraries for building slot games.
