docs: add placeholder pages

--- a/docs/content/docs/core/config/index.mdx
+++ b/docs/content/docs/core/config/index.mdx
@@ -1,7 +1,7 @@
 ---
-title: Configuration Overview
+title: Overview
 description: Learn the key components to defining your game.
-icon: "Settings"
+icon: BookOpenText
 ---
 
 Configuration Overview
