--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -63,7 +63,7 @@ Get started creating your first game using the `@slot-engine/core` library.
     Be sure to check out the docs for all individual configuration options,
     since this should only provide you a quick overview of how to get started.
 
-    You can [read more here](/docs/core/configuration).
+    You can [read more here](/docs/core/config).
 
     ```ts title="index.ts"
     import {
@@ -126,8 +126,7 @@ Get started creating your first game using the `@slot-engine/core` library.
   </Step>
 </Steps>
 
-<Callout title="Good to know">
-  Before configuring your game, you should get familiar with the [concepts and ideas](/docs/core/core-concepts) of the Core library
-  to learn important terminology and background info. If you've used the Stake Math SDK before,
-  many concepts will feel familiar.
+<Callout title="Important">
+  Before configuring your game, it's worth to get familiar with the [concepts and ideas](/docs/core/core-concepts) of the Core library
+  to learn important terminology and background info. If you've used the Stake Math SDK before, many concepts will feel familiar.
 </Callout>
