--- a/docs/content/docs/core/what-is-slot-engine.mdx
+++ b/docs/content/docs/core/what-is-slot-engine.mdx
@@ -4,4 +4,23 @@ description: Build highly customizable slot games with TypeScript.
 icon: "CircleQuestionMark"
 ---
 
-What is it
+---
+
+## Introduction
+
+Slot Engine is a comprehensive TypeScript library ecosystem for building slot games.
+It provides robust mathematical and game logic foundations, with client visualization capabilities planned for future releases.
+
+The term "Slot Engine" refers to both the complete ecosystem and the core library specifically.
+
+## Why Slot Engine
+
+The launch of Stake Engine in 2025 introduced a platform where developers can publish games to the world's largest casino,
+bringing a new wave of developers and studios into the space.
+
+While Stake provides a purpose-built SDK, it has limitations discussed [on this page](/docs/core/slot-engine-vs-stake-math-sdk).
+
+Since Stake's math SDK is written in Python, many developers—particularly those with web development backgrounds in TypeScript or JavaScript—
+face barriers to entry when creating games.
+**Slot Engine provides TypeScript and JavaScript developers with an alternative for creating slot games.**
+
