feat: improve type safety for symbols

--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -78,7 +78,7 @@ Get started creating your first game using the `@slot-engine/core` library.
     export const userState = defineUserState({ /* ... */ })
     export type UserStateType = typeof userState
 
-    export const symbols = defineSymbols([ /* ... */ ])
+    export const symbols = defineSymbols({ /* ... */ })
     export type SymbolsType = typeof symbols
 
     export const gameModes = defineGameModes({ /* ... */ })
