docs: update fumadocs, more writing, styling

--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -11,10 +11,10 @@ icon: "Rocket"
 Slot Engine is a family of TypeScript libraries for building, simulating and testing slot games.
 
 <Cards>
-  <Card icon={<CircuitBoard className="text-blue-300" />} title='Slot Engine Core'>
+  <Card icon={<CircuitBoard className="text-fd-primary" />} title='Slot Engine Core'>
   Library for configuring and simulating slot games. Produces output compatible with Stake Engine / Stake RGS.
   </Card>
-  <Card icon={<Server className="text-blue-300" />} title='Slot Engine LGS'>
+  <Card icon={<Server className="text-fd-primary" />} title='Slot Engine LGS'>
   Local gaming server. Test your game locally without uploading to Stake Engine and save time during development.
   </Card>
 </Cards>
@@ -42,7 +42,7 @@ Get started creating your first game using the `@slot-engine/core` library.
 
     Set up your Node.js project and install `@slot-engine/core`. **Using TypeScript instead of JavaScript is highly recommended.**
 
-    **Slot Engine requires Node >= 23.8.0 or >= 22.15.0** to make use of Zstandard compression.
+    **Slot Engine requires Node >= 23.8.0 or >= 22.15.0** to make use of native Zstandard compression.
 
     ```bash tab="npm"
     npm i @slot-engine/core
