--- a/docs/content/docs/core/slot-engine-vs-stake-math-sdk.mdx
+++ b/docs/content/docs/core/slot-engine-vs-stake-math-sdk.mdx
@@ -68,6 +68,21 @@ The purpose of these methods isn't immediately clear—understanding their role 
 Slot Engine eliminates most "magic methods" by incorporating their functionality directly into the core logic,
 reducing developer confusion and improving code clarity for developers.
 
-### There is no One Size Fits All
+### Game Flow
 
-...
+Stake's Math SDK provides pre-built functions for common game mechanics,
+such as `draw_board()` for generating symbol layouts and `check_fs_condition()` for validating free spin triggers.
+However, these functions are designed for standard game patterns and often fall short when implementing unique features.
+For instance, the default functions cannot accommodate super bonus mechanics without modification.
+Since every slot game has distinctive requirements, developers frequently need to override
+entire functions to achieve their desired functionality.
+
+Slot Engine takes a fundamentally different approach to address this.
+Rather than offering monolithic functions for major game flow components,
+the Core library provides granular utility functions that serve as building blocks for custom game logic.
+
+Developers implement their complete game flow within a single hook function that integrates with the game configuration.
+This hook orchestrates the entire game sequence using utility functions combined with custom code.
+While this approach may initially appear more complex than using pre-built functions, it offers significant advantages:
+it eliminates the need to navigate complex source code hierarchies and override multiple interconnected functions,
+ultimately providing developers with greater flexibility to create truly customized gaming experiences.
