--- a/docs/content/docs/core/index.mdx
+++ b/docs/content/docs/core/index.mdx
@@ -66,7 +66,7 @@ Get started creating your first game using the `@slot-engine/core` library.
     This example provides a quick overview to get you started.
     For detailed configuration options, see the [configuration guide](/docs/core/config).
 
-    ```ts title="index.ts"
+    ```ts lineNumbers title="index.ts"
     import {
       defineUserState,
       defineSymbols,
@@ -100,7 +100,7 @@ Get started creating your first game using the `@slot-engine/core` library.
   <Step>
     ### Simulate your game
 
-    ```ts title="index.ts"
+    ```ts lineNumbers=30 title="index.ts"
     game.configureSimulation({
       simRunsAmount: {
         base: 100000,
